--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,25 @@ $RECYCLE.BIN/
 *.jar
 *.war
 *.ear
+
+.gradle
+/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+bin/
+
+# Ignore folders
+.classpath
+.project
+.settings/
+.vscode/
